--- a/ViiteKirjaus/src/main/webapp/WEB-INF/web.xml
+++ b/ViiteKirjaus/src/main/webapp/WEB-INF/web.xml
@@ -17,5 +17,19 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    
+    <!-- spring front controller -->
+    <servlet>
+        <servlet-name>front-controller</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>front-controller</servlet-name>
+        <url-pattern>/app/*</url-pattern>
+    </servlet-mapping>
+        
+
+    
 </web-app>
 
