--- a/ViiteKirjaus/src/main/webapp/WEB-INF/web.xml
+++ b/ViiteKirjaus/src/main/webapp/WEB-INF/web.xml
@@ -26,7 +26,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>front-controller</servlet-name>
-        <url-pattern>/app/*</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
         
 
