--- a/ViiteKirjaus/pom.xml
+++ b/ViiteKirjaus/pom.xml
@@ -61,12 +61,20 @@
         </dependency>
         
         <!-- persistointi -->
-
+        
         <dependency>
             <groupId>org.avaje.ebeanorm</groupId>
             <artifactId>avaje-ebeanorm-server</artifactId>
+            <version>3.1.3-SNAPSHOT</version>
+            <scope>system</scope> 
+            <systemPath>${basedir}/../EbeanServer/avaje-ebeanorm-server-3.1.3-SNAPSHOT.jar</systemPath>   
+          </dependency>
+
+        <!--<dependency>
+            <groupId>org.avaje.ebeanorm</groupId>
+            <artifactId>avaje-ebeanorm-server</artifactId>
             <version> 3.1.3-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
        
             
         <dependency>
