--- a/ViiteKirjaus/pom.xml
+++ b/ViiteKirjaus/pom.xml
@@ -36,6 +36,30 @@
             <version>1.2</version>
         </dependency>
         
+             <!-- servletit -->
+ 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
+ 
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.1</version>
+            <scope>provided</scope>
+            <classifier/>
+        </dependency>
+ 
+        <dependency>
+            <groupId>javax.servlet.jsp.jstl</groupId>
+            <artifactId>jstl-api</artifactId>
+            <version>1.2</version>
+            <classifier/>
+        </dependency>
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -195,7 +219,17 @@
 
 
     <build>
+        <finalName>viitekirjaus</finalName>
         <plugins>
+            <plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>tomcat-maven-plugin</artifactId>
+                <configuration>
+                    <url>http://192.168.1.7:8080/manager</url>
+                    <server>mytomcat</server>
+                    <path>/viitekirjaus</path>
+		</configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
